# flexInvokable

./: CMakeLists.txt  LICENSE  readme.md
.github/workflows/: main.yml
example/: example.cpp
flexInvokable/: CMakeLists.txt
flexInvokable/include/csari/: flexInvokable.hpp
include/: flexInvokable.hpp
test/: CMakeLists.txt
test/src/: examples.cpp  unit.cpp
